--- a/paper/repaper/refs1.bib
+++ b/paper/repaper/refs1.bib
@@ -23,20 +23,14 @@ pages = 	 "107-111"
  month ="October",
 }
 
-@incollection{Zuiderveld:1994:CLA:180895.180940,
- author = {Zuiderveld, Karel},
- chapter = {Contrast Limited Adaptive Histogram Equalization},
- title = {Graphics Gems IV},
- editor = {Heckbert, Paul S.},
- year = {1994},
- isbn = "0-12-336155-9",
- pages = {474-485},
- numpages = {12},
- url = {http://dl.acm.org/citation.cfm?id=180895.180940},
- acmid = {180940},
- publisher = {Academic Press Professional, Inc.},
- address = {San Diego, CA, USA},
-} 
+@InProceedings{zuiderveld1994contrast,
+  title="Contrast limited adaptive histogram equalization",
+  author="Zuiderveld, Karel",
+  booktitle="Graphics gems IV",
+  pages="474--485",
+  year=1994,
+  organization="Academic Press Professional, Inc."
+}
 
 @InProceedings{gradiente,
   author = 	 " B. Jähne, H. Haubecker and P. Geible",
@@ -180,20 +174,24 @@ volume={2},
 pages={391-394},
 doi={10.1109/ICCTD.2009.115},}
 
-
-@article{he,
-  title={ Non-parametric modified histogram equalisation for contrast enhancement},
-  author={Shashi Poddar,et Al},
-  journal={IET Image Processing},
-  pages={7:641-652},
+@article{poddar2013non,
+  title={Non-parametric modified histogram equalisation for contrast enhancement},
+  author={Poddar, Sunrita and Tewary, Suman and Sharma, Divya and Karar, Vinod and Ghosh, Ashish and Pal, Sankar K},
+  journal={Image Processing, IET},
+  volume={7},
+  number={7},
+  pages={641--652},
   year={2013},
-  month={Oct},
+  publisher={IET}
 }
 
-@article{fuzzy,
-  title={Contrast enhancement and brightness preserving of digital mammograms using fuzzy clipped contrast-limited adaptive histogram equalization algorithm},
-  author={S. Jenifer, et al},
-  journal={Appl. Soft Comput. J.},
+@article{jenifer2016contrast,
+  title={Contrast enhancement and brightness preserving of digital mammograms using fuzzy clipped 
+contrast-limited adaptive histogram equalization algorithm},
+  author={Jenifer, Sheeba and Parasuraman, S and Kadirvelu, Amudha},
+  journal={Applied Soft Computing},
+  volume={42},
+  pages={167--177},
   year={2016},
   publisher={Elsevier}
 }
@@ -208,7 +206,7 @@ keywords={contrast enhancement, particle swarm optimization, structural similari
 }
 
 @INPROCEEDINGS{localentropy,
-  author={Pradipta Maji, et Al.},
+  author={Maji, Pradipta and et Al},
   title={Pattern Recognition and Machine Intelligence},
   booktitle={5th International Conference, PReMI 2013},
   pages={465-473},
@@ -216,19 +214,73 @@ keywords={contrast enhancement, particle swarm optimization, structural similari
 }
 
 @BOOK{correlacion,
-author = {Antonio Nieves Hurtado, Federico C. Domínguez},
+author = {Nieves Hurtado, Antonio and Domínguez, Federico},
 year = 2009,
 title = {Probabilidad y Estadística para Ingeniería, un enfoque moderno},
 chapter = 13,
 publisher = {McGraw Hill},
 }
 
-@BOOK{geneticAlgorithm,
-author = {Sara Hashemi, et Al.},
-month = {October},
-year = 2010,
-title = {Pattern Recognition Letters},
-pages={1816-1824},
-volume=31,
-publisher = {Elsevierl},
+@article{hashemi2010image,
+  title={An image contrast enhancement method based on genetic algorithm},
+  author={Hashemi, Sara and Kiani, Soheila and Noroozi, Navid and Moghaddam, Mohsen Ebrahimi},
+  journal={Pattern Recognition Letters},
+  volume={31},
+  number={13},
+  pages={1816--1824},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@book{jahne1999handbook,
+  title={Handbook of computer vision and applications},
+  author={J{\"a}hne, Bernd and Haussecker, Horst and Geissler, Peter},
+  volume={2},
+  year={1999},
+  publisher={Citeseer}
+}
+
+@inproceedings{yu2004fast,
+  title={A fast and adaptive method for image contrast enhancement},
+  author={Yu, Zeyun and Bajaj, Chandrajit},
+  booktitle={Image Processing, 2004. ICIP'04. 2004 International Conference on},
+  volume={2},
+  pages={1001--1004},
+  year={2004},
+  organization={IEEE}
+}
+
+@ARTICLE{SMG11, 
+author={Singh, B. and Mishra, R.S. and Gour, P.}, 
+journal={International Journal of Computer Technology and Electronics Engineering}, 
+title={Analysis of contrast enhancement techniques for underwater image}, 
+year={2011}, 
+month={Oct},  
+pages={2,14,15,21,31}, 
+}
+
+@ARTICLE{MR13, 
+author={Mohan, Shelda. and Ravishankar, M.}, 
+journal={ACEEE Int. J. on Information Technology}, 
+title={Optimized histogram based contrast limited enhancement for mammogram images}, 
+year={2013}, 
+month={March},  
+pages={2, 3, 7, 21, 24}, 
+}
+
+@inproceedings{nebro2009smpso,
+  title={Smpso: A new pso-based metaheuristic for multi-objective optimization},
+  author={Nebro, Antonio J and Durillo, Juan Jos{\'e} and Garcia-Nieto, Jose and Coello, C and Luna, Francisco and Alba, Enrique},
+  booktitle={Computational intelligence in miulti-criteria decision-making, 2009. mcdm'09. ieee symposium on},
+  pages={66--73},
+  year={2009},
+  organization={IEEE}
+}
+
+@INPROCEEDINGS{digitalimganalysis,
+author={Roman Gonzalez, Avid},
+booktitle={Centre National d’Etudes Spatiales – CNES, Francia},
+title={Digital images analysis},
+year={2013},
+keywords={images, watermarking, hidden information, image manipulation, fakery},
 }
